# compiler

./: .gitignore  Cargo.toml  README.md
benches/: generics.rs
bll/: bll.tex
bll/data/: bubble-sort.csv  fibonacci.csv  matrix-multiplication.csv
bll/sections/: anhang.tex  einleitung.tex  entwicklung.tex  fazit.tex  sprache.tex
compiler-web-demo/: bun.lockb  package.json  pnpm-lock.yaml
compiler-web-demo/src/: App.tsx  index.css  types.ts
example/: main.mx  test.mx
example/algorithms/: string.mx
example/beispiele/: kartenhand.mx  wuerfel.mx  zaehler.mx
example/beispiele/net/: client.mx  server.mx
example/benchmarks/c++/: bubble_sort.cpp  fibonacci.c++  matrix_multiplication.cpp
example/benchmarks/python/: bubble_sort.py  fibonacci.py  matrix_multiplication.py
example/benchmarks/sprache/: bubble_sort.mx  fib.mx  matrix_multiplication.mx
example/std/: fs.mx  io.mx  mem.mx  rand.mx  string.mx  time.mx
example/std/collections/: list.mx
example/std/net/: common.mx
src/: compiler.rs  error.rs  lib.rs  main.rs  utils.rs
src/codegen/: codegen_main.rs  llvm_instructions.rs  mod.rs  structs.rs  utils.rs
src/codegen/structures/: arrays.rs  classes.rs  expressions.rs  functions.rs  if.rs  mod.rs  references.rs  return.rs  type_cast.rs  variables.rs  while.rs
src/lexer/: error.rs  lexer_main.rs  mod.rs  position.rs  tokens.rs  utils.rs
src/parser/: ast.rs  builtins.rs  dependencies.rs  error.rs  mod.rs  parser_main.rs  utils.rs
src/tests/: code.rs  end_to_end.rs  lexer.rs  llvm_instructions.rs  mod.rs  parser.rs  tokens.rs
(+14 files in other folders)
