[package]
name = "compiler"
version = "1.0.0"
edition = "2021"
authors = ["maxomatic458"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
clap = { version = "4.4.11", features = ["derive"] }
codespan-reporting = { git = "https://github.com/brendanzab/codespan", rev = "c84116f5" }
color-eyre = "0.6.2"
derive_more = "0.99.17"
indexmap = { version = "2.2.3", features = ["serde"] }
itertools = "0.12.0"
lazy_static = "1.4.0"
once_cell = "1.18.0"
ordermap = "0.5.3"
phf = { version = "0.11.2", features = ["macros"] }
pretty_assertions = "1.4.0"
rstest = "0.18.2"
semver = "1.0.20"
serde = { version = "1.0.188", features = ["derive"] }
serial_test = { version = "3.0.0", features = ["file_locks"] }
strum = { version = "0.26.1", features = ["derive"] }
strum_macros = "0.26.1"
termcolor = "1.2.0"
thiserror = "1.0.47"
unescape = "0.1.0"

[dev-dependencies]
criterion = "0.5.1"

[profile.release]
lto = true
opt-level = "z"
strip = "debuginfo"

[[bench]]
name = "generics"
harness = false

